tests/error/cant_overload2.gw
// [skip] but cannot overload
class C {
	function void test(){}
	function int  test(int i){}
}
